5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1800_2571.log
== SUBMITION (2019-06-12 23:59:44) 
-- CODE:
from numpy import*
v = input("v: ")
for x in a:
	v = v.replace("a","")
	v = v.replace("A"."")
print(v)
-- EXECUTION TIME:
0.544647
-- ERROR:
  File "/home/codebench/codes/1800/2571/main.py", line 5
    v = v.replace("A"."")
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:00:10) 
-- CODE:
from numpy import*
a = input("v: ")
for x in a:
	a = a.replace("a","")
	a = a.replace("A"."")
print(a)
-- EXECUTION TIME:
0.52308
-- ERROR:
  File "/home/codebench/codes/1800/2571/main.py", line 5
    a = a.replace("A"."")
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:00:24) 
-- CODE:
from numpy import*
a = input("v: ")
for x in a:
	a = a.replace("a","")
	a = a.replace("A","")
print(a)
-- EXECUTION TIME:
1.31144
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
